redo resume page

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         </div>
         <div class="my-intro">
             <p>As an aspiring software engineer with a focus on frontend development and a passion for UX Design, 
-            I love designing things and implementing my designs. 
-            Welcome to my portfolio!</p>
+            I love designing things and implementing my designs.</p>
+            <p class="in-touch">Get in touch</p>
         </div>
     </header>
     <main>
