--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/other-styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@400;700&family=Righteous&family=Roboto+Mono:wght@300;400;500&family=Rubik&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&family=Righteous&family=Roboto+Mono:wght@300;400;500&family=Rubik&display=swap" rel="stylesheet">
 <body>
     <nav class="navbar navbar-expand-sm navbar-light" id="navbar">
         <a class="navbar-brand" href="index.html" id="logo">
@@ -42,7 +42,164 @@
     </nav>
     <main class="resume">
         <h1>Resume</h1>
-        <iframe src="https://drive.google.com/file/d/1_f6J9sQryOYaN2J64GTJl-_ApA6Bb1IY/preview" width="700" height="700" allow="autoplay"></iframe>
+        <section class="resume-section">
+            <div class="row">
+                <div class="col-sm-5 col-md-4 col-lg-3">
+                    <h4>Education</h4>
+                </div>
+                <div class="col">
+                    <div class="row">
+                        <div class="col">
+                            <h5>University of North Carolina at Chapel Hill</h5>
+                            <p><span class="bold">Majors:</span> B.S. Computer Science, B.S. Information Science</p>
+                            <p><span class="bold">Concentration:</span> Human-Computer Interaction</p>
+                            <p><span class="bold">GPA:</span> 3.97/4.00</p>
+                            <p><span class="bold">Honors:</span> Dean's List (all semesters), SILS Scholarship</p>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <div class="col">
+                            <div class="row">
+                                <div class="col"><h5>Relevant Courses</h5></div>
+                            </div>
+                            <div class="row">
+                                <div class="col">
+                                    <p><span class="bold">Programming</span></p>
+                                    <p>Data Structures and Algorithms</p>
+                                    <p>Foundations of Software Engineering</p>
+                                    <p>Modern Web Development</p>
+                                    <p>Files and Databases</p>
+                                    <p>Foundations of Programming</p>
+                                    <p>Computer Organization</p>
+                                </div>
+                                <div class="col">
+                                    <p><span class="bold">Design</span></p>
+                                    <p>User Interfaces</p>
+                                    <p>System Design and Analysis</p>
+                                    <p>Web Design</p>
+                                    <p>Human Information Behavior</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="resume-section pink">
+            <div class="row">
+                <div class="col-sm-5 col-md-4 col-lg-3">
+                    <h4>Skills</h4>
+                </div>
+                <div class="col">
+                    <div class="row">
+                        <div class="col">
+                            <h5>Programming</h5>
+                            <p>TypeScript</p>
+                            <p>HTML</p>
+                            <p>CSS</p>
+                            <p>SQL</p>
+                            <p>Python</p>
+                            <p>JavaScript</p>
+                            <p>Java</p>
+                        </div>
+                        <div class="col">
+                            <h5>Frameworks</h5>
+                            <p>Angular</p>
+                            <p>Bootstrap</p>
+                            <p>FastAPI</p>
+                            <p>SQLAlchemy</p>
+                        </div>
+                        <div class="col">
+                            <h5>Tools</h5>
+                            <p>Figma</p>
+                            <p>Git / GitHub</p>
+                            <p>DevTools</p>
+                            <p>PostgreSQL</p>
+                        </div>
+                        <div class="col">
+                            <h5>Design</h5>
+                            <p>wireframing</p>
+                            <p>prototyping</p>
+                            <p>usability testing</p>
+                            <p>graphic design</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="resume-section">
+            <div class="row">
+                <div class="col-sm-5 col-md-4 col-lg-3">
+                    <h4>Experience</h4>
+                </div>
+                <div class="col">
+                    <div class="experience">
+                        <div class="position">
+                            <h5>UNC School of Government</h5>
+                            <p>UI / Instructional Designer</p>
+                        </div>
+                        <p class="grey">Aug 2022 - Present</p>
+                    </div>
+                    <div class="experience">
+                        <div class="position">
+                            <h5>Social Games Club</h5>
+                            <p>Graphic Designer</p>
+                        </div>
+                        <p class="grey">June 2018 - Present</p>
+                    </div>
+                    <div class="experience">
+                        <div class="position">
+                            <h5>UNC Computer Science</h5>
+                            <p>Software Developer</p>
+                        </div>
+                        <p class="grey">Aug 2021 - May 2022</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="resume-section pink">
+            <div class="row">
+                <div class="col-sm-5 col-md-4 col-lg-3">
+                    <h4>Projects</h4>
+                </div>
+                <div class="col">
+                    <div class="experience">
+                        <div class="position">
+                            <h5>Around the Block | Design Lead</h5>
+                            <p>Designed and developed a website for artists using Angular, TypeScript, HTML, CSS, Python, and PostgreSQL.</p>
+                        </div>
+                    </div>
+                    <div class="experience">
+                        <div class="position">
+                            <h5>CSXL Workshops | Tech Lead</h5>
+                            <p>Developed a new workshops feature for UNC's CSXL's website using Angular, TypeScript, and Python.</p>
+                        </div>
+                    </div>
+                    <div class="experience">
+                        <div class="position">
+                            <h5>KTP Rush App | UX Designer</h5>
+                            <p>Designed an iOS app to optimize UNC KTP's rush process using Figma.</p>
+                        </div>
+                    </div>
+                    <div class="experience">
+                        <div class="position">
+                            <h5>Bloom</h5>
+                            <p>Designed an iOS app to boost productivity using Figma.</p>
+                        </div>
+                    </div>
+                    <div class="experience">
+                        <div class="position">
+                            <h5>Polaris Navigation</h5>
+                            <p>Designed and developed a website for accessible navigation on campus using Angular, Python, MongoDB, and Figma.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <div class="row">
+            <a class="button btn-pink" href="/" target="_blank">Get a PDF of my Resume</a>
+        </div>
     </main>
     <footer>
         <div class="socials">
