restructure about page

--- a/about.html
+++ b/about.html
@@ -42,15 +42,25 @@
     </nav>
     <main>
         <section class="white">
-            <h1>
-                About Me
-            </h1>
-            <p>I'm currently a junior at <span class="bold">UNC Chapel Hill</span> studying Computer Science and Information Science 
-                with a focus on <span class="bold">Human-Computer Interaction</span>.</p>
-            <p>After working on various fullstack development projects, I've realized that I enjoy frontend development the most. 
-                I've always had a passion for design, whether it be through making graphics for clubs or friends, 
-                or through personal art projects. I enjoy UX design because it's the perfect overlap of design and technology!</p>
-            <p>In my free time, you can probably find me painting, reading a good book, or trying out a new restaurant.</p>
+            <div class="row">
+                <div class="col-sm-12 col-md-12 col-lg-6">
+                    <h1>
+                        About Me
+                    </h1>
+                    <p>I'm currently a junior at <span class="bold">UNC Chapel Hill</span> studying Computer Science and Information Science 
+                        with a focus on <span class="bold">Human-Computer Interaction</span>.</p>
+                    <p>After working on various fullstack development projects, I've realized that I enjoy frontend development the most. 
+                        I've always had a passion for design, whether it be through making graphics for clubs or friends, 
+                        or through personal art projects. I enjoy UX design because it's the perfect overlap of design and technology!</p>
+                    <p>In my free time, you can probably find me painting, reading a good book, or trying out a new restaurant.</p>
+                </div>
+                <div class="col-sm-12 col-md-12 col-lg-5 my-picture">
+                    <div class="image-wrapper">
+                        <img class="me" src="./images/elaine.png" alt="picture of Elaine">
+                    </div>
+                </div>
+            </div>
+            
         </section>
         <section class="pink">
             <h1>
