add resume file

--- a/resume.html
+++ b/resume.html
@@ -198,7 +198,7 @@
             </div>
         </section>
         <div class="row">
-            <a class="button btn-pink" href="/" target="_blank">Get a PDF of my Resume</a>
+            <a class="button btn-pink" href="./files/Elaine_Dong_Resume_5.5.23.pdf" target="_blank">Get a PDF of my Resume</a>
         </div>
     </main>
     <footer>
