--- a/index.html
+++ b/index.html
@@ -45,9 +45,15 @@
             <h2>I'm Elaine.</h2>
         </div>
         <div class="my-intro">
-            <p>As an aspiring software engineer with a focus on frontend development and a passion for UX Design, 
+            <p class="tagline">As an aspiring software engineer with a focus on frontend development and a passion for UX Design, 
             I love designing things and implementing my designs.</p>
-            <p class="in-touch">Get in touch</p>
+            <p class="in-touch">Get in touch at 
+                <a class="underline-hover" href="mai&#108;to&#58;%65%&#54;C&#37;61%69n&#101;&#100;o%6E&#37;67&#53;&#37;3&#50;%3&#48;&#64;g&#109;%6&#49;i%6&#67;&#37;2Ec%6Fm"><span id="email"></span>
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
+                </svg>
+                </a>
+            </p>
         </div>
     </header>
     <main>
@@ -98,7 +104,8 @@
     </main>
     <footer>
         <div class="socials">
-            <a href="mailto:elainedong520@gmail.com" target="_blank">
+            
+            <a id="email-link" href="mai&#108;to&#58;%65%&#54;C&#37;61%69n&#101;&#100;o%6E&#37;67&#53;&#37;3&#50;%3&#48;&#64;g&#109;%6&#49;i%6&#67;&#37;2Ec%6Fm" target="_blank">
                 <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
                     <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z"/>
                 </svg>
