--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <a class="navbar-brand" href="index.html" id="logo">
             <svg width="80" height="45" viewBox="0 0 71 111" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M1.5 11.5V95L53.5 108.5V93L19 83.5V67L33.5 71L40.5 73V57L19 51V32L33.5 36L53.5 41.5V26.5L1.5 11.5Z" fill="#FFEAEA"/>
-                <path d="M19 67V83.5L33.5 75.5V71L19 67Z" fill="#FF7777"/>
-                <path d="M19 32V51L33.5 45.5V36L19 32Z" fill="#FF7777"/>
-                <path d="M40.5 57V73L53.5 66.5V51L40.5 57Z" fill="#FF7777"/>
-                <path d="M53.5 26.5V41.5L69.5 32V17L53.5 26.5Z" fill="#FF7777"/>
-                <path d="M53.5 93V108.5L69.5 99V85L53.5 93Z" fill="#FF7777"/>
+                <path d="M19 67V83.5L33.5 75.5V71L19 67Z" fill="#940242"/>
+                <path d="M19 32V51L33.5 45.5V36L19 32Z" fill="#940242"/>
+                <path d="M40.5 57V73L53.5 66.5V51L40.5 57Z" fill="#940242"/>
+                <path d="M53.5 26.5V41.5L69.5 32V17L53.5 26.5Z" fill="#940242"/>
+                <path d="M53.5 93V108.5L69.5 99V85L53.5 93Z" fill="#940242"/>
                 <path d="M19 51L40.5 57L53.5 51L33.5 45.5L19 51Z" fill="#FFC5C5"/>
                 <path d="M1.5 11.5L53.5 26.5L69.5 17L18 2.5L1.5 11.5Z" fill="#FFC5C5"/>
                 <path d="M19 83.5L53.5 93L69.5 85L33.5 75.5L19 83.5Z" fill="#FFC5C5"/>
@@ -104,7 +104,6 @@
     </main>
     <footer>
         <div class="socials">
-            
             <a id="email-link" href="mai&#108;to&#58;%65%&#54;C&#37;61%69n&#101;&#100;o%6E&#37;67&#53;&#37;3&#50;%3&#48;&#64;g&#109;%6&#49;i%6&#67;&#37;2Ec%6Fm" target="_blank">
                 <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
                     <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z"/>
