--- a/resume.html
+++ b/resume.html
@@ -17,11 +17,11 @@
         <a class="navbar-brand" href="index.html" id="logo">
             <svg width="80" height="45" viewBox="0 0 71 111" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M1.5 11.5V95L53.5 108.5V93L19 83.5V67L33.5 71L40.5 73V57L19 51V32L33.5 36L53.5 41.5V26.5L1.5 11.5Z" fill="#FFEAEA"/>
-                <path d="M19 67V83.5L33.5 75.5V71L19 67Z" fill="#FF7777"/>
-                <path d="M19 32V51L33.5 45.5V36L19 32Z" fill="#FF7777"/>
-                <path d="M40.5 57V73L53.5 66.5V51L40.5 57Z" fill="#FF7777"/>
-                <path d="M53.5 26.5V41.5L69.5 32V17L53.5 26.5Z" fill="#FF7777"/>
-                <path d="M53.5 93V108.5L69.5 99V85L53.5 93Z" fill="#FF7777"/>
+                <path d="M19 67V83.5L33.5 75.5V71L19 67Z" fill="#940242"/>
+                <path d="M19 32V51L33.5 45.5V36L19 32Z" fill="#940242"/>
+                <path d="M40.5 57V73L53.5 66.5V51L40.5 57Z" fill="#940242"/>
+                <path d="M53.5 26.5V41.5L69.5 32V17L53.5 26.5Z" fill="#940242"/>
+                <path d="M53.5 93V108.5L69.5 99V85L53.5 93Z" fill="#940242"/>
                 <path d="M19 51L40.5 57L53.5 51L33.5 45.5L19 51Z" fill="#FFC5C5"/>
                 <path d="M1.5 11.5L53.5 26.5L69.5 17L18 2.5L1.5 11.5Z" fill="#FFC5C5"/>
                 <path d="M19 83.5L53.5 93L69.5 85L33.5 75.5L19 83.5Z" fill="#FFC5C5"/>
