complete atb page almost

--- a/projects/atb.html
+++ b/projects/atb.html
@@ -68,31 +68,33 @@
             <p>Before starting the design process, our team administered 12 user interviews with artists, 
                 of which I conducted 6. From the information we gathered, we created 3 user personas to represent 
                 the different types of users that our website targets. We also created empathy maps to identiy user 
-                pain points and journey maps to visualize use cases</p>
+                pain points and journey maps to visualize use cases.</p>
             <div class="personas">
-                <img>
-                <img>
-                <img>
+                <a class="persona p1" href="../images/atb/olivia.png" target="_blank"></a>
+                <a class="persona p2" href="../images/atb/ian.png" target="_blank"></a>
+                <a class="persona p3" href="../images/atb/lucy.png" target="_blank"></a>
             </div>
         </section>
         <section class="white">
             <h2>02. Design</h2>
-            <h3>Low Fidelity Wireframes</h3>
             <h3>Styling</h3>
-            <h3>High Fidelity Wireframes and Interactive Prototype</h3>
-            <iframe src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FHNoOWo1tvsZzL69swSnkdF%2FAtB-Prototype%3Fnode-id%3D116-114%26scaling%3Dmin-zoom%26page-id%3D56%253A98%26starting-point-node-id%3D116%253A114" allowfullscreen class="atb-prototype"></iframe>
-            <div class="row">
-                <a class="button btn-pink" href="https://www.figma.com/proto/HNoOWo1tvsZzL69swSnkdF/AtB-Prototype?node-id=116-114&scaling=min-zoom&page-id=56%3A98&starting-point-node-id=116%3A114&hide-ui=1" target="_blank">Open Prototype in New Tab</a>
+            <div class="img-container">
+                <div class="style atb-style"></div>
             </div>
+            <h3>High Fidelity Wireframes and Interactive Prototype</h3>
+            <p>Video of Prototype</p>
         </section>
         <section class="pink">
             <h2>03. Implementation</h2>
-            <p>We used Angular, TypeScript, HTML, and CSS to build the frontend; 
-                PostgreSQL and SQLAlchemy for managing the database; and Python to build the backend.</p>
             <div class="row">
-                <a class="button btn-pink" href="https://aroundtheblock.apps.cloudapps.unc.edu/" target="_blank">Live Site</a>
+                <a class="button btn-pink" href="https://aroundtheblock.apps.cloudapps.unc.edu/" target="_blank">View Live Site</a>
                 <a class="button btn-pink" href="https://github.com/chphoom/aroundtheblock" target="_blank">Repository</a>
             </div>
+            <p>We used Angular, TypeScript, HTML, and CSS to build the frontend; 
+                PostgreSQL and SQLAlchemy for managing the database; and Python to build the backend. 
+                I mainly worked in the frontend to style and structure the pages, retrieve data from the backend, and write scripts. 
+                I also helped with implementing authentication and made some API endpoints and functions in the backend.
+            </p>
         </section>
     </main>
     <footer>
