update ktp page

--- a/projects/atb.html
+++ b/projects/atb.html
@@ -44,8 +44,8 @@
     <main>
         <section class="background white">
             <h1>Around the Block</h1>
-            <h2>COMP 590: User Interfaces</h2>
-            <h3>Roles: Design Lead, Developer, Researcher</h3>
+            <h4>COMP 590: User Interfaces</h4>
+            <h5>Roles: Design Lead, Developer, Researcher</h5>
             <p>With a team of three, I designed and developed a website for artists struggling with creative block, 
                 looking to challenge themselves and connect with a community of creatives. Users can generate random art challenges, 
                 called meChallenges, that will challenge them to create something new and unique every time. 
@@ -65,6 +65,17 @@
         </section>
         <section class="pink">
             <h2>01. Research</h2>
+            <h3>The Problem</h3>
+            <p>A lot of artists struggle with creative block. One way artists overcome this is by using idea generators. 
+                There are definitely existing art prompt generators, but they don't really facilitate a sense of community or the sharing of art.
+                While there have been art prompts and art challenges such as Inktober in the past, 
+                it is often difficult to view the work of other artists from these challenges in an organized manner.
+            </p>
+            <p>We wanted to create a space where artists can find inspiration from prompts as well as 
+                other artists' work. At the same time, we wanted to avoid the pitfall of social media in which artists become 
+                too focused on engagement rather than art itself.
+            </p>
+            <h3>User Interviews and Personas</h3>
             <p>Before starting the design process, our team administered 12 user interviews with artists, 
                 of which I conducted 6. From the information we gathered, we created 3 user personas to represent 
                 the different types of users that our website targets. We also created empathy maps to identiy user 
