--- a/resume.html
+++ b/resume.html
@@ -55,6 +55,7 @@
                             <p><span class="bold">Concentration:</span> Human-Computer Interaction</p>
                             <p><span class="bold">GPA:</span> 3.97/4.00</p>
                             <p><span class="bold">Honors:</span> Dean's List (all semesters), SILS Scholarship</p>
+                            <p><span class="bold">Activities:</span> CUSA, AASA</p>
                         </div>
                     </div>
                     <br>
