--- a/projects/ktp.html
+++ b/projects/ktp.html
@@ -44,10 +44,10 @@
     <main>
         <section class="background white">
             <h1>KTP Rush App</h1>
-            <h2>INLS 382: System Design and Analysis</h2>
-            <h3>Role: UX/UI Designer</h3>
-            <p>Kappa Theta Pi (KTP) is a co-ed professional fraternity specializing in technology. I designed an iOS app for 
-                the UNC chapter's rush process, the process of applying to become a member.
+            <h4>INLS 382: System Design and Analysis</h4>
+            <h5>Role: UX/UI Designer</h5>
+            <p>Kappa Theta Pi (KTP) is a co-ed professional fraternity specializing in technology. I designed an iOS app to streamline 
+                the UNC chapter's rush process, which is the process of applying to become a member.
             </p>
             <div class="tags">
                 <p class="tag">Figma</p>
@@ -56,6 +56,13 @@
         <section class="blue">
             <h2>01. Research</h2>
             <h3>The Problem</h3>
+            <p>During the rush process, data on the rushees is collected and evaluated by the members of 
+                the organization. Currently, this process is done through multiple Google forms and spreadsheets, 
+                which can be time-consuming and difficult to manage effectively.</p>
+            <p>The current process for storing and evaluating data during rush is not as efficient as it could be. 
+                The use of multiple Google forms and spreadsheets leads to difficulties in consolidating all the data into one place, 
+                evaluating the performance of rushees, and calculating scores. This results in a system that is cluttered 
+                and hard to navigate, leading to inefficiencies and frustration for those involved in the rush process.</p>
             <h3>Interviews</h3>
             <p>User interviews were conducted with KTP's director of rush as well as current KTP members and former rushees.</p>
             <div class="personas">
@@ -65,15 +72,15 @@
         </section>
         <section class="white">
             <h2>02. Design</h2>
-            <h3>Models</h3>
             <h3>Styling</h3>
+            <div class="img-container">
+                <div class="style ktp-style"></div>
+            </div>
             <h3>High Fidelity Wireframes and Interactive Prototype</h3>
-            <iframe class="ktp-prototype" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2Fh0wcicMr6EF46g9UFmmXpe%2FKTP-Wireframes%3Fnode-id%3D120-153%26scaling%3Dscale-down%26page-id%3D1%253A2%26starting-point-node-id%3D222%253A916" allowfullscreen></iframe>
-            <p>Open prototype in new tab</p>
         </section>
         <section class="blue">
             <h2>03. Future Work</h2>
-            <p>The final prototype gained approval from the client, KTP's Director of Rush. The implementation of this app will be developed in Summer 2023 using SwiftUI.</p>
+            <p>The final prototype gained the approval of the client, KTP's Director of Rush. The implementation of this app will be developed in Summer 2023 using SwiftUI.</p>
         </section>
     </main>
     <footer>
