--- a/projects/ktp.html
+++ b/projects/ktp.html
@@ -64,7 +64,8 @@
                 evaluating the performance of rushees, and calculating scores. This results in a system that is cluttered 
                 and hard to navigate, leading to inefficiencies and frustration for those involved in the rush process.</p>
             <h3>Interviews</h3>
-            <p>User interviews were conducted with KTP's director of rush as well as current KTP members and former rushees.</p>
+            <p>User interviews were conducted with KTP's director of rush as well as current KTP members and former rushees. 
+                Using the information gathered, I created two personas to represent the different types of users for this app.</p>
             <div class="personas">
                 <img>
                 <img>
@@ -77,6 +78,12 @@
                 <div class="style ktp-style"></div>
             </div>
             <h3>High Fidelity Wireframes and Interactive Prototype</h3>
+            <div class="video-container">
+                <video width="320" height="auto" controls>
+                    <source src="../images/ktp/KTP-demo.mov" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </div>
         </section>
         <section class="blue">
             <h2>03. Future Work</h2>
