--- a/resume.html
+++ b/resume.html
@@ -96,34 +96,19 @@
                     <div class="row">
                         <div class="col">
                             <h5>Programming</h5>
-                            <p>TypeScript</p>
-                            <p>HTML</p>
-                            <p>CSS</p>
-                            <p>SQL</p>
-                            <p>Python</p>
-                            <p>JavaScript</p>
-                            <p>Java</p>
+                            <ul id="programming"></ul>
                         </div>
                         <div class="col">
                             <h5>Frameworks</h5>
-                            <p>Angular</p>
-                            <p>Bootstrap</p>
-                            <p>FastAPI</p>
-                            <p>SQLAlchemy</p>
+                            <ul id="frameworks"></ul>
                         </div>
                         <div class="col">
                             <h5>Tools</h5>
-                            <p>Figma</p>
-                            <p>Git / GitHub</p>
-                            <p>DevTools</p>
-                            <p>PostgreSQL</p>
+                            <ul id="tools"></ul>
                         </div>
                         <div class="col">
                             <h5>Design</h5>
-                            <p>wireframing</p>
-                            <p>prototyping</p>
-                            <p>usability testing</p>
-                            <p>graphic design</p>
+                            <ul id="design"></ul>
                         </div>
                     </div>
                 </div>
