--- a/projects/atb.html
+++ b/projects/atb.html
@@ -93,7 +93,9 @@
                 <div class="style atb-style"></div>
             </div>
             <h3>High Fidelity Wireframes and Interactive Prototype</h3>
-            <p>Video of Prototype</p>
+            <div class="video-container">
+                <iframe src="https://drive.google.com/file/d/1nfBkjP72UpR9Mfwtyuo3hX6nb2ii_Z-X/preview" width="840" height="500" allow="autoplay"></iframe>
+            </div>
         </section>
         <section class="pink">
             <h2>03. Implementation</h2>
