--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
                 </div>
                 <div class="col-sm-12 col-md-12 col-lg-5 my-picture">
                     <div class="image-wrapper">
-                        <img class="me" src="./images/elaine.png" alt="picture of Elaine">
+                        <img class="me" src="./images/elaine.png" alt="picture of me" title="picture of me">
                     </div>
                 </div>
             </div>
@@ -82,47 +82,47 @@
                 My Art
             </h1>
             <div class="art-grid">
-                <a class="art-piece img1" href="./images/art/sunset-bridge.jpeg" target="_blank">
+                <a class="art-piece img1" href="./images/art/sunset-bridge.jpeg" target="_blank" aria-label="dawn bridge painting" title="dawn bridge">
                     <div class="overlay">
                         <h1>01. Dawn Bridge</h1>
                     </div>
                 </a>
-                <a class="art-piece img2" href="./images/art/dreamy-mountains.jpeg" target="_blank">
+                <a class="art-piece img2" href="./images/art/dreamy-mountains.jpeg" target="_blank" aria-label="dreaming mountains painting" title="dreaming mountains">
                     <div class="overlay">
                         <h1>02. Dreaming Mountains</h1>
                     </div>
                 </a>
-                <a class="art-piece img3" href="./images/art/lovebirds.jpeg" target="_blank">
+                <a class="art-piece img3" href="./images/art/lovebirds.jpeg" target="_blank" aria-label="lovebirds painting" title="lovebirds">
                     <div class="overlay">
                         <h1>03. Lovebirds</h1>
                     </div>
                 </a>
-                <a class="art-piece img4" href="./images/art/burning-city.jpeg" target="_blank">
+                <a class="art-piece img4" href="./images/art/burning-city.jpeg" target="_blank" aria-label="burning city painting" title="burning city">
                     <div class="overlay">
                         <h1>04. Burning City</h1>
                     </div>
                 </a>
-                <a class="art-piece img5" href="./images/art/days-end.jpeg" target="_blank">
+                <a class="art-piece img5" href="./images/art/days-end.jpeg" target="_blank" aria-label="day's end painting" title="day's end">
                     <div class="overlay">
                         <h1>05. Day's End</h1>
                     </div>
                 </a>
-                <a class="art-piece img6" href="./images/art/in-the-clouds.jpeg" target="_blank">
+                <a class="art-piece img6" href="./images/art/in-the-clouds.jpeg" target="_blank" aria-label="in the clouds painting" title="in the clouds">
                     <div class="overlay">
                         <h1>06. In the Clouds</h1>
                     </div>
                 </a>
-                <a class="art-piece img7" href="./images/art/stitch.jpeg" target="_blank">
+                <a class="art-piece img7" href="./images/art/stitch.jpeg" target="_blank" aria-label="stitched painting" title="stitched">
                     <div class="overlay">
                         <h1>07. Stitched</h1>
                     </div>
                 </a>
-                <a class="art-piece img8" href="./images/art/hydrangeas.jpeg" target="_blank">
+                <a class="art-piece img8" href="./images/art/hydrangeas.jpeg" target="_blank" aria-label="hydrangeas painting" title="hydrangeas">
                     <div class="overlay">
                         <h1>08. Hydrangeas</h1>
                     </div>
                 </a>
-                <a class="art-piece img9" href="./images/art/rainy-park.jpeg" target="_blank">
+                <a class="art-piece img9" href="./images/art/rainy-park.jpeg" target="_blank" aria-label="rainy day in the park painting" title="rainy day in the park">
                     <div class="overlay">
                         <h1>09. Rainy Day in the Park</h1>
                     </div>
