--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="previews">
             <div class="preview">
                 <div class="project-content">
-                    <a class="thumbnail atb-img" href="projects/atb.html"></a>
+                    <a class="thumbnail atb-img" href="projects/atb.html" aria-label="atb thumbnail"></a>
                     <div class="project-info">
                         <div class="project-title"><h3>Around the Block</h3></div>
                         <div class="project-desc"><p>A website for helping artists get around creative block by providing new challenges and inspiration.</p></div>
@@ -84,7 +84,7 @@
             </div>
             <div class="preview">
                 <div class="project-content">
-                    <a class="thumbnail ktp-img" href="projects/ktp.html"></a>
+                    <a class="thumbnail ktp-img" href="projects/ktp.html" aria-label="ktp thumbnail"></a>
                     <div class="project-info">
                         <div class="project-title"><h3>KTP Rush</h3></div>
                         <div class="project-desc"><p>An iOS app designed to improve the efficiency of UNC's technology fraternity's rush process.</p></div>
@@ -128,7 +128,7 @@
         <p><a href="https://github.com/elaine331917/elaine331917.github.io" target="_blank">Designed and Developed by Elaine Dong</a> | <script>document.write(new Date().getFullYear())</script></p>
     </footer>
     <button onclick="topFunction()" id="top" title="Go to top">
-        <img src="./icons/top.svg">
+        <img src="./icons/top.svg" alt="go to top">
     </button>
     <script src="./scripts/script.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
