--- a/projects/atb.html
+++ b/projects/atb.html
@@ -90,7 +90,7 @@
             <h2>02. Design</h2>
             <h3>Styling</h3>
             <div class="img-container">
-                <div class="style atb-style"></div>
+                <div class="style atb-style" aria-label="atb style"></div>
             </div>
             <h3>High Fidelity Wireframes and Interactive Prototype</h3>
             <div class="video-container">
@@ -136,7 +136,7 @@
         <p><a href="https://github.com/elaine331917/elaine331917.github.io" target="_blank">Designed and Developed by Elaine Dong</a> | <script>document.write(new Date().getFullYear())</script></p>
     </footer>
     <button onclick="topFunction()" id="top" title="Go to top">
-        <img src="../icons/top.svg">
+        <img src="../icons/top.svg" alt="go to top">
     </button>
     <script src="../scripts/script.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
