--- a/resume.html
+++ b/resume.html
@@ -214,7 +214,7 @@
         <p><a href="https://github.com/elaine331917/elaine331917.github.io" target="_blank">Designed and Developed by Elaine Dong</a> | <script>document.write(new Date().getFullYear())</script></p>
     </footer>
     <button onclick="topFunction()" id="top" title="Go to top">
-        <img src="./icons/top.svg">
+        <img src="./icons/top.svg" alt="go to top">
     </button>
     <script src="./scripts/skills.js"></script>
     <script src="./scripts/script.js"></script>
