adjust alt tags

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="previews">
             <div class="preview">
                 <div class="project-content">
-                    <a class="thumbnail atb-img" href="projects/atb.html" aria-label="atb thumbnail"></a>
+                    <a class="thumbnail atb-img" href="projects/atb.html" aria-label="atb thumbnail" title="atb thumbnail"></a>
                     <div class="project-info">
                         <div class="project-title"><h3>Around the Block</h3></div>
                         <div class="project-desc"><p>A website for helping artists get around creative block by providing new challenges and inspiration.</p></div>
@@ -84,7 +84,7 @@
             </div>
             <div class="preview">
                 <div class="project-content">
-                    <a class="thumbnail ktp-img" href="projects/ktp.html" aria-label="ktp thumbnail"></a>
+                    <a class="thumbnail ktp-img" href="projects/ktp.html" aria-label="ktp thumbnail" title="ktp thumbnail"></a>
                     <div class="project-info">
                         <div class="project-title"><h3>KTP Rush</h3></div>
                         <div class="project-desc"><p>An iOS app designed to improve the efficiency of UNC's technology fraternity's rush process.</p></div>
