--- a/projects/atb.html
+++ b/projects/atb.html
@@ -80,17 +80,12 @@
                 of which I conducted 6. From the information we gathered, we created 3 user personas to represent 
                 the different types of users that our website targets. We also created empathy maps to identiy user 
                 pain points and journey maps to visualize use cases.</p>
-            <div class="personas">
-                <a class="persona p1" href="../images/atb/olivia.png" target="_blank"></a>
-                <a class="persona p2" href="../images/atb/ian.png" target="_blank"></a>
-                <a class="persona p3" href="../images/atb/lucy.png" target="_blank"></a>
-            </div>
         </section>
         <section class="white">
             <h2>02. Design</h2>
             <h3>Styling</h3>
             <div class="img-container">
-                <div class="style atb-style" aria-label="atb style"></div>
+                <div class="style atb-style" aria-label="atb style" title="atb style guide"></div>
             </div>
             <h3>High Fidelity Wireframes and Interactive Prototype</h3>
             <div class="video-container">
