--- a/projects/ktp.html
+++ b/projects/ktp.html
@@ -65,7 +65,7 @@
                 and hard to navigate, leading to inefficiencies and frustration for those involved in the rush process.</p>
             <h3>Interviews</h3>
             <p>User interviews were conducted with KTP's director of rush as well as current KTP members and former rushees. 
-                Using the information gathered, I created two personas to represent the different types of users for this app.</p>
+                Using the information gathered, we created two personas and journey maps to represent the different types of users for this app.</p>
             <div class="personas">
                 <img>
                 <img>
@@ -75,7 +75,7 @@
             <h2>02. Design</h2>
             <h3>Styling</h3>
             <div class="img-container">
-                <div class="style ktp-style" aria-label="ktp style"></div>
+                <div class="style ktp-style" aria-label="ktp style" title="ktp style guide"></div>
             </div>
             <h3>High Fidelity Wireframes and Interactive Prototype</h3>
             <div class="video-container">
